# biosphere-simulator

./: .gitattributes  .gitignore  Biosphere_Simulator_Roadmap.docx  CLAUDE.md  LICENSE  NOTICE  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
bench/: perf.py
docs/: authoring-reference.manifest.json  authoring-reference.md  biosphere-reference.manifest.json  biosphere-reference.md  bvad-reference.md  native-port-reference.md  param-file-conventions.md  perf-baseline.md  phase-8-reference.md  reuse-and-licenses.md  station-reference.manifest.json  station-reference.md
docs/plans/: phase-0-engine-skeleton.md  phase-0.5-numerical-foundations.md  phase-1-single-producer.md  phase-2-closed-chamber.md  phase-3-modular-biosphere.md  phase-4-closed-biosphere.md  phase-5-sibling-domains.md  phase-6-station-integration.md  phase-7-native-core.md  phase-8-godot-frontend.md  phase-9-scenario-authoring.md  post-roadmap-authored-habitat.md  post-roadmap-citation.md  post-roadmap-day-neutral-crop.md  post-roadmap-decomposer-calibration.md  post-roadmap-flow-registry-growth.md  post-roadmap-grammar-monod.md  post-roadmap-multirate-authoring.md  post-roadmap-oracle-match.md  post-roadmap-rationing-gate.md  post-roadmap-rust-primary-pivot.md  post-roadmap-validation.md
godot/: authored_marker_smoke.gd  compose_dashboard.gd  compose_dashboard.tscn  compose_smoke.gd  compose_ui_smoke.gd  dashboard_smoke.gd  dashboard_smoke.gd.uid  flow_smoke.gd  from_file_dashboard.gd  from_file_dashboard.tscn  from_file_smoke.gd  from_file_template_smoke.gd  from_file_ui_smoke.gd  greenhouse_smoke.gd  main.gd  main.gd.uid  main.tscn  main_ui_smoke.gd  objectives_smoke.gd  perturbation_smoke.gd  project.godot  save_dashboard.gd  save_dashboard.tscn  save_smoke.gd  save_ui_smoke.gd  sealed_smoke.gd  simcore.gdextension  simcore.gdextension.uid  smoke.gd  smoke.gd.uid  time_dashboard.gd  time_dashboard.tscn  time_smoke.gd  ui_smoke.gd
rust/: Cargo.toml
rust/crates/authoring/: Cargo.toml
rust/crates/authoring/examples/: dump_graph.rs  emit_authored.rs
rust/crates/authoring/src/: compose.rs  errors.rs  expr_parser.rs  flow_registry.rs  graph_dump.rs  interpreter.rs  lib.rs  run.rs  schema.rs  sexpr.rs  template.rs  yaml.rs
rust/crates/authoring/tests/: authoring_vectors.rs  multirate.rs  scenario_files.rs
rust/crates/authoring/tests/data/: parse_vectors.txt  traj_vectors.txt
rust/crates/domains/: Cargo.toml
rust/crates/domains/examples/: emit_consumer.rs  emit_crew.rs  emit_drift.rs  emit_eclss.rs  emit_perennial.rs  emit_power.rs  emit_power_self_discharge.rs  emit_sealed.rs  emit_season.rs  emit_thermal.rs
rust/crates/domains/src/: crew.rs  eclss.rs  lib.rs  params.rs  power.rs  sibling_params.txt  thermal.rs
rust/crates/domains/src/biosphere/: biosphere_params.txt  flows.rs  mod.rs  params.rs  perturbations.rs  science.rs  stocks.rs  system.rs  weather.rs  weather_facts.txt
rust/crates/godot_bridge/: Cargo.toml
rust/crates/godot_bridge/src/: lib.rs  save.rs  time_control.rs
rust/crates/simcore/: Cargo.toml
rust/crates/simcore/examples/: emit_composite.rs  emit_crew.rs
rust/crates/simcore/src/: arbitration.rs  auxiliary.rs  boundary.rs  conservation.rs  environment.rs  error.rs  events.rs  expr.rs  flow.rs  hexfloat.rs  ids.rs  integrator.rs  json.rs  lib.rs  multirate.rs  observation.rs  quantities.rs  registry.rs  rng.rs  snapshot.rs  state.rs
rust/crates/simcore/tests/: engine_vectors.rs  hexfloat_roundtrip.rs  rng_vectors.rs
rust/crates/simcore/tests/data/: engine_vectors.txt  hexfloat_vectors.txt  rng_vectors.txt
rust/crates/station/: Cargo.toml
rust/crates/station/examples/: emit_cabin_gas.rs  emit_greenhouse.rs  emit_harvest.rs  emit_lighting.rs  emit_perturbed_brownout.rs  emit_sealed_energy_drift.rs  emit_sealed_resume.rs  emit_sealed_station.rs  emit_station.rs  emit_water_recovery.rs
rust/crates/station/src/: builder.rs  cabin.rs  display.rs  driver.rs  flows.rs  greenhouse.rs  harvest.rs  inspection.rs  lib.rs  lighting.rs  objectives.rs  palette.rs  params.rs  perturbations.rs  scenario.rs  sealed.rs  session.rs  station_params.txt  stocks.rs  system.rs  water.rs
rust/crates/station/tests/: builder_parity.rs  day_neutral_lighting.rs  perturbations.rs  session_parity.rs  session_save_load.rs
scenarios/: algae_habitat.yaml
src/authoring/: __init__.py  compose.py  errors.py  expr_parser.py  flow_registry.py  interpreter.py  run.py  schema.py  template.py
src/config/: __init__.py  errors.py  loader.py  units.py
src/domains/: __init__.py
src/lab/: __init__.py  convergence.py  oracle_match.py  rk45.py
src/sim_io/: __init__.py  snapshot.py
src/simcore/: __init__.py  arbitration.py  auxiliary.py  boundary.py  conservation.py  environment.py  events.py  expr.py  flow.py  ids.py  integrator.py  multirate.py  observation.py  quantities.py  registry.py  rng.py  state.py
src/station/: __init__.py  cabin.py  driver.py  flows.py  greenhouse.py  harvest.py  lighting.py  loader.py  perturbations.py  (+4 more)
tests/: conftest.py  golden_platform.py  sealed_tier2_helper.py  test_allocation.py  test_arbitration.py  test_authored_habitat.py  test_authoring_compose.py  test_authoring_crew.py  test_authoring_dt_hazard.py  test_authoring_export_fidelity.py  test_authoring_freeze_manifest.py  test_authoring_frozen_flows.py  test_authoring_kinetics.py  test_authoring_monod.py  test_authoring_multirate_composability.py  test_authoring_multirate_compose.py  test_authoring_multirate_crossport_anchor.py  test_authoring_multirate_identity.py  test_authoring_multirate_partition.py  test_authoring_multirate_run.py  test_authoring_param_packs.py  test_authoring_rate_precondition.py  test_authoring_templates.py  test_aux.py  test_biosphere_demo.py  test_biosphere_purity.py  test_biosphere_stress.py  test_boundary.py  test_builders.py  test_bvad_validation.py  test_cabin_run.py  test_canopy.py  test_carbon_budget.py  test_chamber.py  test_compartment_ledger.py  test_compartments.py  test_composition.py  test_config.py  test_conservation.py  test_consumer.py  (+83 more)
(+161 files in other folders)
