[workspace]
resolver = "2"
members = ["crates/simcore", "crates/domains", "crates/station", "crates/godot_bridge"]

# Phase 7 native port of the frozen Python reference. The Rust crate tree mirrors
# the Python package layout (`simcore` first; `domains` joins in Step 3 when it
# holds the four Phase-5 siblings; `station` joins in Step 5 — no empty speculative
# crates before then). The port has NO reference authority: a divergence from a
# frozen golden is an unfreeze-discipline finding about the Python reference, never
# a silent Rust "fix".
