[workspace]
resolver = "2"
members = [
    "crates/simcore",
    "crates/domains",
    "crates/station",
    "crates/godot_bridge",
    "crates/authoring",
]

# Phase 7 native port of the frozen Python reference. The Rust crate tree mirrors
# the Python package layout (`simcore` first; `domains` joins in Step 3 when it
# holds the four Phase-5 siblings; `station` joins in Step 5 — no empty speculative
# crates before then). The port has NO reference authority: a divergence from a
# frozen golden is an unfreeze-discipline finding about the Python reference, never
# a silent Rust "fix".
#
# `authoring` (Phase-9 Step 4a) is the boundary crate mirroring Python `src/authoring`:
# the rate-expression parser (text→AST). It depends only on `simcore` (for the AST
# types); no YAML dependency yet — runtime scenario-file parsing (decision E) is Step
# 4b/5, deliberately separated so the parse-parity + trajectory-parity crux needs no
# new dep.
