[package]
name = "authoring"
version = "0.1.0"
edition = "2021"
description = "Native Rust port of the frozen Python `authoring` boundary (Phase 9, Step 4a). The rate-expression parser (text→simcore::expr AST) + the canonical S-expr renderer that the cross-port parse-parity gate diffs. Depends only on the zero-dep `simcore` crate."
publish = false

[lib]
name = "authoring"
path = "src/lib.rs"

# `simcore` (the engine + AST + hex-float codec) and `domains` (the frozen crew flows
# + the Option-C param constants the interpreter wires) — exactly the two packages the
# Python `authoring` package imports. Step 4b's YAML reader is **hand-rolled** over a
# closed subset (`src/yaml.rs`, decision E USER-CONFIRMED): no YAML crate — one grammar
# owned on both ports, mirroring the Phase-7 Option-C / hex-float zero-dep ethos.
[dependencies]
simcore = { path = "../simcore" }
domains = { path = "../domains" }
